# web-workout

./: .dockerignore  .gitignore  AUTH_SETUP.md  Caddyfile  Dockerfile  docker-compose.yml  mkcert-setup.md  setup-https.bat
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  AuthContext.tsx  api.ts  index.css  types.ts
client/src/components/: ActiveWorkout.tsx  SpotifyBanner.tsx  SpotifyEmbed.tsx  WorkoutList.tsx  WorkoutSetup.tsx
server/: .env.example  app.py  migrate.py  pyproject.toml  workouts.db
